--- a/fc_django/templates/admin/index.html
+++ b/fc_django/templates/admin/index.html
@@ -3,8 +3,7 @@
 
 {% block extrahead %}
 {{ block.super }}
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js" 
-integrity="sha512-d9xgZrVZpmmQlfonhQUvTR7lMPtO7NkZMkA0ABN3PHCbKA5nqylQ/yWlFAyY6hYgdF1Qh6nYiuADWwKB4C2WSw==" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js"></script>
 {% endblock %}
 
 {% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% static "admin/css/dashboard.css" %}">{% endblock %}
@@ -21,8 +20,9 @@ integrity="sha512-d9xgZrVZpmmQlfonhQUvTR7lMPtO7NkZMkA0ABN3PHCbKA5nqylQ/yWlFAyY6h
 <div id="content-main" class="p-4">
     <h4>주문 현황</h4>
     <canvas id="orderChart">
-    
     </canvas>
+    <h4>현재 환율</h4> <br>
+    <h5>달러 환율 : {{ exchange }} </h5>
 </div>
 
 <script>
